<resources>
    <string name="app_name">KiosRakyat</string>
    <string name="transaksi">Transaksi</string>
    <string name="home">Home</string>
    <string name="profile">Profil</string>
    <string name="search_hint">Apa yang kamu cari ?</string>

    <string name="sembako">Sembako</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>
    <string name="alat_mandi">Alat Mandi</string>
    <string name="galon">Galon</string>
    <string name="gas">Gas</string>
    <string name="rokok">Rokok</string>
    <string name="obat">Obat</string>
    <string name="sayur_buah">Sayur Buah</string>
    <string name="alat_kebersihan">Kebersihan</string>

    <string name="edit_profile">Edit Profil</string>
    <string name="share">Bagikan</string>
    <string name="about">Tentang</string>
    <string name="logout">Keluar</string>

    <string name="title_profile">Data Diri</string>
    <string name="number_phone">Nomor Telepon</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="address">Alamat</string>
    <string name="email">Email</string>


    <string name="sort">Sort</string>
    <string name="filter">Filter</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="basket">Keranjang</string>
    <string name="process">Proses</string>
    <string name="history">Riwayat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_text">Share</string>

    <string name="totalPrice">Total Harga</string>
    <string name="unitPrice">Rp</string>

    <string name="tersedia">Tersedia</string>

    <string name="searchBasicNeeds">Sembako apa yang kamu cari ?</string>
    <string name="searchSnack">Makanan apa yang kamu cari ?</string>
    <string name="searchBeverage">Minuman apa yang kamu cari ?</string>
    <string name="searchBathTools">Alat Mandi apa yang kamu cari ?</string>
    <string name="searchGallonGas">Galon atau gas apa yang kamu cari ?</string>
    <string name="searchCigarette">Rokok apa yang kamu cari ?</string>
    <string name="searchMedicine">Obat apa yang kamu cari ?</string>
    <string name="searchFruitVegetables">Sayur atau buah apa yang kamu cari ?</string>
    <string name="searchCleaningTools">Alat Kebersihan apa yang kamu cari ?</string>

    <string-array name="metode_pengiriman">
        <item>Diantar</item>
        <item>Diambil</item>
    </string-array>

    <string name="keranjangIsEmpty">Anda belum mengisi keranjang</string>
    <string name="menungguIsEmpty">Tidak ada pesanan yang Anda tunggu</string>
    <string name="diprosesIsEmpty">Tidak ada pesanan yang sedang Dikemas</string>
    <string name="riwayatIsEmpty">Anda tidak memiliki riwayat pesanan yang belum Anda nilai</string>
    <string name="google_maps_key">AIzaSyCEGgcp1I_mzO7_mYJyqOZzeR268ak2Qag</string>

</resources>
