<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Class.StoreActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:background="@color/colorPrimary"/>

    <RelativeLayout
        android:id="@+id/toolbarStore"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:id="@+id/backInStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_white"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/mapStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_map_white"
            android:background="@null"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/storeName"
        android:layout_below="@id/toolbarStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/ic_store"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:src="@drawable/ic_store_white"/>

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_store"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:text="Toko Laura"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/storeLocation"
        android:layout_below="@id/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_location_white_with_trim"/>

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_location"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:text="Jl. Rambutan No 56B, Sinduadi"
            android:textSize="10dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/totalPrice"
        android:layout_below="@id/storeLocation"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:background="@drawable/store_page_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:paddingTop="17dp"
            android:paddingBottom="22dp">

            <TextView
                android:id="@+id/totalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalPrice"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_light"/>

            <TextView
                android:id="@+id/unitPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/totalPriceText"
                android:text="@string/unitPrice"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:id="@+id/totalPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="4dp"
                android:text="0"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"/>

            <RelativeLayout
                android:id="@+id/metodePengiriman"
                android:layout_below="@id/totalPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textMetodePengiriman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="Metode Pengiriman"
                    android:textSize="13dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_light"/>

                <Spinner
                    android:id="@+id/spinnerMetodePengiriman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:entries="@array/metode_pengiriman"
                    android:paddingRight="30dp"
                    android:background="@drawable/spinner_border_metode_pengiriman"/>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/insertBasket"
                android:layout_below="@id/metodePengiriman"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Masukkan Keranjang"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_medium"/>

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/availableText"
        android:layout_below="@id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:text="@string/tersedia"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_item_at_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/availableText"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sort"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            app:icon="@drawable/ic_sort_black"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/fabSort"
            android:text="@string/filter"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            app:icon="@drawable/ic_filter_black"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lihatKeranjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="17dp"
        android:padding="10dp"
        android:background="@drawable/background_succes_history"
        android:visibility="gone">

        <TextView
            android:id="@+id/totalItemBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 Pesanan"
            android:textColor="@color/white"
            android:textSize="13dp"/>

        <TextView
            android:id="@+id/textLihatPesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Lihat Keranjang"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </RelativeLayout>


</RelativeLayout>