<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:openDrawer="start">

<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content">-->

<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view_profile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start|left"
        app:itemIconTint="@color/colorPrimary"
        app:headerLayout="@layout/header_profile_side_navigation"
        app:menu="@menu/profile_side_navigation"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bg_profile"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:src="@drawable/cherry_blossom"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/haruna_kawaguchi"
                app:civ_border_width="0dp"
                app:civ_border_color="#FF000000"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/profile_name"
                android:layout_below="@id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="Haruna Kawaguchi"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"/>

            <RelativeLayout
                android:layout_below="@id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/profile_bg">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="19dp"
                    android:paddingRight="18dp"
                    android:paddingBottom="40dp"
                    android:paddingTop="13dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">

                        <ImageView
                            android:id="@+id/ic_title_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="19dp"
                            android:src="@drawable/ic_title_profile_orange"/>

                        <TextView
                            android:id="@+id/title_profile"
                            android:layout_toRightOf="@id/ic_title_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/title_profile"
                            android:textSize="15dp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/roboto_medium"/>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/number_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:text="@string/number_phone"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:fontFamily="@font/roboto_light"/>

                    <TextView
                        android:id="@+id/profile_number_phone"
                        android:layout_below="@id/number_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="081347591227"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_medium"/>

                    <View
                        android:id="@+id/line_number_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_below="@id/profile_number_phone"
                        android:layout_marginTop="6dp"
                        android:background="@color/line"/>

                    <TextView
                        android:id="@+id/date_of_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line_number_phone"
                        android:layout_marginTop="13dp"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:fontFamily="@font/roboto_light"/>

                    <TextView
                        android:id="@+id/profile_date_of_birth"
                        android:layout_below="@id/date_of_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="10 Februari 1995"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_medium"/>

                    <View
                        android:id="@+id/line_date_of_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_below="@id/profile_date_of_birth"
                        android:layout_marginTop="6dp"
                        android:background="@color/line"/>

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line_date_of_birth"
                        android:layout_marginTop="13dp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:fontFamily="@font/roboto_light"/>

                    <TextView
                        android:id="@+id/profile_address"
                        android:layout_below="@id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Jl. Kenari No. 195, Nagasaki, Jepang"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_medium"/>

                    <View
                        android:id="@+id/line_address"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_below="@id/profile_address"
                        android:layout_marginTop="6dp"
                        android:background="@color/line"/>

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line_address"
                        android:layout_marginTop="13dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="13dp"
                        android:fontFamily="@font/roboto_light"/>

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_below="@id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="harunakawaguchi@gmail.com"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto_medium"/>

                    <View
                        android:id="@+id/line_email"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_below="@id/profile_email"
                        android:layout_marginTop="6dp"
                        android:background="@color/line"/>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>